deployment/gcp-dev/gke/ingress-app-client.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-app-dev
  annotations:
    # Use a static ip
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-dev"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    #    nginx.ingress.kubernetes.io/rewrite-target: /app
    #nginx.org/websocket-services: ""
    # enable session persistence for one or multiple services

spec:
  rules:
    - host: app-tpi-dev.nebulae.com.co
      http:
        paths:
        - path: /
          backend:
            serviceName: frontend-pwa-client
            servicePort: 80
  tls:
    - hosts:
      - app-tpi-dev.nebulae.com.co
      secretName: app-tpi-dev-web
#  backend:
#    serviceName: frontend-pwa-client
#    servicePort: 80
