deployment/gcp-dev/gke/ingress-web-main.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web-main
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-dev"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:  
  rules:
  - host: tpi-dev.nebulae.com.co
    http:
      paths:  
      - path: /
        backend:
          serviceName: frontend-emi
          servicePort: 80     
      - path: /emi
        backend:
          serviceName: frontend-emi
          servicePort: 80     
      - path: /app
        backend:
          serviceName: frontend-pwa-client
          servicePort: 80     
      - path: /auth
        backend:
          serviceName: keycloak-http
          servicePort: 80        
      - path: /api/emi-gateway
        backend:
          serviceName: api-emi-gateway
          servicePort: 80
      - path: /api/driver-gateway
        backend:
          serviceName: api-driver-gateway
          servicePort: 80
      - path: /api/client-gateway
        backend:
          serviceName: api-client-gateway
          servicePort: 80
  tls:
      - hosts:
        - tpi-dev.nebulae.com.co
        secretName: tpi-dev-http-nginx-tls-web2
